--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 #cover {
-  background:url("https://i0.wp.com/cdn.1millionwomen.com.au/media/large_image/bike_painted.jpg?resize=3257%2C1796&ssl=1") no-repeat center center;
+  background:url("http://i67.tinypic.com/2uxuser.jpg") no-repeat center center;
   height: 900px;
   position: relative;
   top: -55px;
