--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 #cover {
-  background:url("http://i67.tinypic.com/2uxuser.jpg") no-repeat center center;
+  background:url("http://c2.peakpx.com/wallpaper/662/845/207/2k-bicycling-bike-bottle-water-wallpaper.jpg") no-repeat center center;
   height: 900px;
   position: relative;
   top: -55px;
