--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 #cover {
-  background:url("http://c2.peakpx.com/wallpaper/662/845/207/2k-bicycling-bike-bottle-water-wallpaper.jpg") no-repeat center center;
+  background:url("https://i0.wp.com/gosunbody.com/wp-content/uploads/2017/07/4-arj5imwsq.jpg?fit=1600%2C882&ssl=1") no-repeat center center;
   height: 900px;
   position: relative;
   top: -55px;
